--- a/rockaPaperScissors.html
+++ b/rockaPaperScissors.html
@@ -41,8 +41,10 @@
       }
       return victorySpeech
       } 
-    const playerSelection = "scissors"
-    const computerSelection = computerPlay()
+    //original input! converted to lower case on function variable
+    const lowerCasePlayerSelection = "scisSors";
+    const playerSelection = lowerCasePlayerSelection.toLowerCase();
+    const computerSelection = computerPlay();
     
     console.log(playRound(playerSelection, computerSelection))
   </script>
