commented out playerPlay() redundancy and called game()

--- a/rockaPaperScissors.html
+++ b/rockaPaperScissors.html
@@ -48,7 +48,7 @@
     console.log(playRound(playerSelection, computerSelection))
     
     //function that promptes/simulates playerPlay
-    function playerPlay() 
+    /*function playerPlay() 
             {
                 let choices = ['rock', 'paper', 'scissors']
                 let playerInput = prompt('Rock, Paper, or Scissors?');
@@ -68,7 +68,8 @@
                         alert(`End of game`);
                     }
                 }
-            }
+            } */
+
     // score variables for score tracking
     let playerScore = 0;
     let computerScore = 0;
@@ -91,6 +92,9 @@
         console.log(`It's a draw!`)
       }
     }
+
+    // calls game() function
+    game()
   </script>
 </body>
 </html>
