--- a/rockaPaperScissors.html
+++ b/rockaPaperScissors.html
@@ -48,7 +48,7 @@
     console.log(playRound(playerSelection, computerSelection))
     
     //function that promptes/simulates playerPlay
-    /*function playerPlay() 
+    function playerPlay() 
             {
                 let choices = ['rock', 'paper', 'scissors']
                 let playerInput = prompt('Rock, Paper, or Scissors?');
@@ -68,7 +68,7 @@
                         alert(`End of game`);
                     }
                 }
-            } */
+            }
 
     // score variables for score tracking
     let playerScore = 0;
